lib/src/bindings.dart

// ignore_for_file: camel_case_types
// ignore_for_file: non_constant_identifier_names
// ignore_for_file: constant_identifier_names
// ignore_for_file: unused_field
import 'dart:ffi' as ffi;

class Chipmunks {
  final ffi.Pointer<T> Function<T extends ffi.NativeType>(String symbolName) _lookup;

  Chipmunks(ffi.DynamicLibrary dynamicLibrary) : _lookup = dynamicLibrary.lookup {
    // space_free_native = _cpSpaceFreePtr.cast();
    // body_free_native = _cpBodyFreePtr.cast();
    // shape_free_native = _cpShapeFreePtr.cast();
  }

  Chipmunks.fromLookup(ffi.Pointer<T> Function<T extends ffi.NativeType>(String symbolName) lookup) : _lookup = lookup;
  ffi.Pointer<cpSpace> cpSpaceNew() {
    return _cpSpaceNew();
  }

  late final _cpSpaceNewPtr = _lookup<ffi.NativeFunction<ffi.Pointer<cpSpace> Function()>>('cpSpaceNew');
  late final _cpSpaceNew = _cpSpaceNewPtr.asFunction<ffi.Pointer<cpSpace> Function()>();

  void cpSpaceSetGravity(
    ffi.Pointer<cpSpace> space,
    cpVect gravity,
  ) {
    return _cpSpaceSetGravity(
      space,
      gravity,
    );
  }

  late final _cpSpaceSetGravityPtr = _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Pointer<cpSpace>, cpVect)>>('cpSpaceSetGravity');
  late final _cpSpaceSetGravity = _cpSpaceSetGravityPtr.asFunction<void Function(ffi.Pointer<cpSpace>, cpVect)>();

  ffi.Pointer<cpShape> cpSegmentShapeNew(
    ffi.Pointer<cpBody> body,
    cpVect a,
    cpVect b,
    double radius,
  ) {
    return _cpSegmentShapeNew(
      body,
      a,
      b,
      radius,
    );
  }

  late final _cpSegmentShapeNewPtr = _lookup<ffi.NativeFunction<ffi.Pointer<cpShape> Function(ffi.Pointer<cpBody>, cpVect, cpVect, cpFloat)>>('cpSegmentShapeNew');
  late final _cpSegmentShapeNew = _cpSegmentShapeNewPtr.asFunction<ffi.Pointer<cpShape> Function(ffi.Pointer<cpBody>, cpVect, cpVect, double)>();

  ffi.Pointer<cpBody> cpSpaceGetStaticBody(
    ffi.Pointer<cpSpace> space,
  ) {
    return _cpSpaceGetStaticBody(
      space,
    );
  }

  late final _cpSpaceGetStaticBodyPtr = _lookup<ffi.NativeFunction<ffi.Pointer<cpBody> Function(ffi.Pointer<cpSpace>)>>('cpSpaceGetStaticBody');
  late final _cpSpaceGetStaticBody = _cpSpaceGetStaticBodyPtr.asFunction<ffi.Pointer<cpBody> Function(ffi.Pointer<cpSpace>)>();

  void cpShapeSetFriction(
    ffi.Pointer<cpShape> shape,
    double friction,
  ) {
    return _cpShapeSetFriction(
      shape,
      friction,
    );
  }

  late final _cpShapeSetFrictionPtr = _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Pointer<cpShape>, cpFloat)>>('cpShapeSetFriction');
  late final _cpShapeSetFriction = _cpShapeSetFrictionPtr.asFunction<void Function(ffi.Pointer<cpShape>, double)>();

  ffi.Pointer<cpShape> cpSpaceAddShape(
    ffi.Pointer<cpSpace> space,
    ffi.Pointer<cpShape> shape,
  ) {
    return _cpSpaceAddShape(
      space,
      shape,
    );
  }

  late final _cpSpaceAddShapePtr = _lookup<ffi.NativeFunction<ffi.Pointer<cpShape> Function(ffi.Pointer<cpSpace>, ffi.Pointer<cpShape>)>>('cpSpaceAddShape');
  late final _cpSpaceAddShape = _cpSpaceAddShapePtr.asFunction<ffi.Pointer<cpShape> Function(ffi.Pointer<cpSpace>, ffi.Pointer<cpShape>)>();

  double cpMomentForCircle(
    double m,
    double r1,
    double r2,
    cpVect offset,
  ) {
    return _cpMomentForCircle(
      m,
      r1,
      r2,
      offset,
    );
  }

  late final _cpMomentForCirclePtr = _lookup<ffi.NativeFunction<cpFloat Function(cpFloat, cpFloat, cpFloat, cpVect)>>('cpMomentForCircle');
  late final _cpMomentForCircle = _cpMomentForCirclePtr.asFunction<double Function(double, double, double, cpVect)>();

  ffi.Pointer<cpBody> cpSpaceAddBody(
    ffi.Pointer<cpSpace> space,
    ffi.Pointer<cpBody> body,
  ) {
    return _cpSpaceAddBody(
      space,
      body,
    );
  }

  late final _cpSpaceAddBodyPtr = _lookup<ffi.NativeFunction<ffi.Pointer<cpBody> Function(ffi.Pointer<cpSpace>, ffi.Pointer<cpBody>)>>('cpSpaceAddBody');
  late final _cpSpaceAddBody = _cpSpaceAddBodyPtr.asFunction<ffi.Pointer<cpBody> Function(ffi.Pointer<cpSpace>, ffi.Pointer<cpBody>)>();

  void cpBodySetPosition(
    ffi.Pointer<cpBody> body,
    cpVect pos,
  ) {
    return _cpBodySetPosition(
      body,
      pos,
    );
  }

  late final _cpBodySetPositionPtr = _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Pointer<cpBody>, cpVect)>>('cpBodySetPosition');
  late final _cpBodySetPosition = _cpBodySetPositionPtr.asFunction<void Function(ffi.Pointer<cpBody>, cpVect)>();

  cpVect cpBodyGetPosition(
    ffi.Pointer<cpBody> body,
  ) {
    return _cpBodyGetPosition(
      body,
    );
  }

  late final _cpBodyGetPositionPtr = _lookup<ffi.NativeFunction<cpVect Function(ffi.Pointer<cpBody>)>>('cpBodyGetPosition');
  late final _cpBodyGetPosition = _cpBodyGetPositionPtr.asFunction<cpVect Function(ffi.Pointer<cpBody>)>();

  cpVect cpBodyGetVelocity(
    ffi.Pointer<cpBody> body,
  ) {
    return _cpBodyGetVelocity(
      body,
    );
  }

  late final _cpBodyGetVelocityPtr = _lookup<ffi.NativeFunction<cpVect Function(ffi.Pointer<cpBody>)>>('cpBodyGetVelocity');
  late final _cpBodyGetVelocity = _cpBodyGetVelocityPtr.asFunction<cpVect Function(ffi.Pointer<cpBody>)>();

  void cpSpaceStep(
    ffi.Pointer<cpSpace> space,
    double dt,
  ) {
    return _cpSpaceStep(
      space,
      dt,
    );
  }

  late final _cpSpaceStepPtr = _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Pointer<cpSpace>, cpFloat)>>('cpSpaceStep');
  late final _cpSpaceStep = _cpSpaceStepPtr.asFunction<void Function(ffi.Pointer<cpSpace>, double)>();

  void cpShapeFree(
    ffi.Pointer<cpShape> shape,
  ) {
    return _cpShapeFree(
      shape,
    );
  }

  //late ffi.Pointer<ffi.NativeFunction<ffi.Void Function(ffi.Pointer<cpShape> shape)>> shape_free_native;
  late final _cpShapeFreePtr = _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Pointer<cpShape>)>>('cpShapeFree');
  late final _cpShapeFree = _cpShapeFreePtr.asFunction<void Function(ffi.Pointer<cpShape>)>();

  void cpBodyFree(
    ffi.Pointer<cpBody> body,
  ) {
    return _cpBodyFree(
      body,
    );
  }

  //late ffi.Pointer<ffi.NativeFunction<ffi.Void Function(ffi.Pointer<cpBody> body)>> body_free_native;
  late final _cpBodyFreePtr = _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Pointer<cpBody>)>>('cpBodyFree');
  late final _cpBodyFree = _cpBodyFreePtr.asFunction<void Function(ffi.Pointer<cpBody>)>();

  void cpSpaceFree(
    ffi.Pointer<cpSpace> space,
  ) {
    return _cpSpaceFree(
      space,
    );
  }

  //late ffi.Pointer<ffi.NativeFunction<ffi.Void Function(ffi.Pointer<cpSpace> space)>> space_free_native;
  late final _cpSpaceFreePtr = _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Pointer<cpSpace>)>>('cpSpaceFree');
  late final _cpSpaceFree = _cpSpaceFreePtr.asFunction<void Function(ffi.Pointer<cpSpace>)>();

  ffi.Pointer<cpBody> cpBodyNew(
    double mass,
    double moment,
  ) {
    return _cpBodyNew(
      mass,
      moment,
    );
  }

  late final _cpBodyNewPtr = _lookup<ffi.NativeFunction<ffi.Pointer<cpBody> Function(cpFloat, cpFloat)>>('cpBodyNew');
  late final _cpBodyNew = _cpBodyNewPtr.asFunction<ffi.Pointer<cpBody> Function(double, double)>();

  ffi.Pointer<cpShape> cpCircleShapeNew(
    ffi.Pointer<cpBody> body,
    double radius,
    cpVect offset,
  ) {
    return _cpCircleShapeNew(
      body,
      radius,
      offset,
    );
  }

  late final _cpCircleShapeNewPtr = _lookup<ffi.NativeFunction<ffi.Pointer<cpShape> Function(ffi.Pointer<cpBody>, cpFloat, cpVect)>>('cpCircleShapeNew');
  late final _cpCircleShapeNew = _cpCircleShapeNewPtr.asFunction<ffi.Pointer<cpShape> Function(ffi.Pointer<cpBody>, double, cpVect)>();

  void cpMessage(
    ffi.Pointer<ffi.Char> condition,
    ffi.Pointer<ffi.Char> file,
    int line,
    int isError,
    int isHardError,
    ffi.Pointer<ffi.Char> message,
  ) {
    return _cpMessage(
      condition,
      file,
      line,
      isError,
      isHardError,
      message,
    );
  }

  late final _cpMessagePtr = _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>, ffi.Int, ffi.Int, ffi.Int, ffi.Pointer<ffi.Char>)>>('cpMessage');
  late final _cpMessage = _cpMessagePtr.asFunction<void Function(ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>, int, int, int, ffi.Pointer<ffi.Char>)>();

  late final ffi.Pointer<ffi.Pointer<ffi.Char>> _cpVersionString = _lookup<ffi.Pointer<ffi.Char>>('cpVersionString');

  ffi.Pointer<ffi.Char> get cpVersionString => _cpVersionString.value;

  set cpVersionString(ffi.Pointer<ffi.Char> value) => _cpVersionString.value = value;

  double cpAreaForCircle(
    double r1,
    double r2,
  ) {
    return _cpAreaForCircle(
      r1,
      r2,
    );
  }

  late final _cpAreaForCirclePtr = _lookup<ffi.NativeFunction<cpFloat Function(cpFloat, cpFloat)>>('cpAreaForCircle');
  late final _cpAreaForCircle = _cpAreaForCirclePtr.asFunction<double Function(double, double)>();

  double cpMomentForSegment(
    double m,
    cpVect a,
    cpVect b,
    double radius,
  ) {
    return _cpMomentForSegment(
      m,
      a,
      b,
      radius,
    );
  }

  late final _cpMomentForSegmentPtr = _lookup<ffi.NativeFunction<cpFloat Function(cpFloat, cpVect, cpVect, cpFloat)>>('cpMomentForSegment');
  late final _cpMomentForSegment = _cpMomentForSegmentPtr.asFunction<double Function(double, cpVect, cpVect, double)>();

  double cpAreaForSegment(
    cpVect a,
    cpVect b,
    double radius,
  ) {
    return _cpAreaForSegment(
      a,
      b,
      radius,
    );
  }

  late final _cpAreaForSegmentPtr = _lookup<ffi.NativeFunction<cpFloat Function(cpVect, cpVect, cpFloat)>>('cpAreaForSegment');
  late final _cpAreaForSegment = _cpAreaForSegmentPtr.asFunction<double Function(cpVect, cpVect, double)>();

  double cpMomentForPoly(
    double m,
    int count,
    ffi.Pointer<cpVect> verts,
    cpVect offset,
    double radius,
  ) {
    return _cpMomentForPoly(
      m,
      count,
      verts,
      offset,
      radius,
    );
  }

  late final _cpMomentForPolyPtr = _lookup<ffi.NativeFunction<cpFloat Function(cpFloat, ffi.Int, ffi.Pointer<cpVect>, cpVect, cpFloat)>>('cpMomentForPoly');
  late final _cpMomentForPoly = _cpMomentForPolyPtr.asFunction<double Function(double, int, ffi.Pointer<cpVect>, cpVect, double)>();

  double cpAreaForPoly(
    int count,
    ffi.Pointer<cpVect> verts,
    double radius,
  ) {
    return _cpAreaForPoly(
      count,
      verts,
      radius,
    );
  }

  late final _cpAreaForPolyPtr = _lookup<ffi.NativeFunction<cpFloat Function(ffi.Int, ffi.Pointer<cpVect>, cpFloat)>>('cpAreaForPoly');
  late final _cpAreaForPoly = _cpAreaForPolyPtr.asFunction<double Function(int, ffi.Pointer<cpVect>, double)>();

  cpVect cpCentroidForPoly(
    int count,
    ffi.Pointer<cpVect> verts,
  ) {
    return _cpCentroidForPoly(
      count,
      verts,
    );
  }

  late final _cpCentroidForPolyPtr = _lookup<ffi.NativeFunction<cpVect Function(ffi.Int, ffi.Pointer<cpVect>)>>('cpCentroidForPoly');
  late final _cpCentroidForPoly = _cpCentroidForPolyPtr.asFunction<cpVect Function(int, ffi.Pointer<cpVect>)>();

  double cpMomentForBox(
    double m,
    double width,
    double height,
  ) {
    return _cpMomentForBox(
      m,
      width,
      height,
    );
  }

  late final _cpMomentForBoxPtr = _lookup<ffi.NativeFunction<cpFloat Function(cpFloat, cpFloat, cpFloat)>>('cpMomentForBox');
  late final _cpMomentForBox = _cpMomentForBoxPtr.asFunction<double Function(double, double, double)>();

  double cpMomentForBox2(
    double m,
    cpBB box,
  ) {
    return _cpMomentForBox2(
      m,
      box,
    );
  }

  late final _cpMomentForBox2Ptr = _lookup<ffi.NativeFunction<cpFloat Function(cpFloat, cpBB)>>('cpMomentForBox2');
  late final _cpMomentForBox2 = _cpMomentForBox2Ptr.asFunction<double Function(double, cpBB)>();
